--- a/src/css/colors.css
+++ b/src/css/colors.css
@@ -14,23 +14,23 @@
   --light-gray: #f2f2f2;
   --middle-gray: #b1b1b1;
   --error-color: #c53a20;
-  --error-bg-color: #efc6bf;
 }
 
 body{
     background-color: var(--dark-gray);
 }
 
-#view{
+#view,.profile{
     background-color: var(--light-gray);
 }
 
 h1,
-h2 {
+h2,
+h3 {
   color: var(--primary-dark-color);
 }
 
-header p {
+p, form {
   color: var(--dark-gray);
 }
 
@@ -48,6 +48,13 @@ input{
 }
 
 #Send:hover{
-    transition: all 0.4s linear;
     background-color: var(--secondary-light-color);
+}
+
+.card{
+    box-shadow: 0px 0px 2px var(--dark-gray);
+}
+
+.card:hover{
+    box-shadow: 0px 0px 5px var(--secondary-dark-color);
 }
