--- a/src/css/fontello-421a178d/css/fontello.css
+++ b/src/css/fontello-421a178d/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('./icons/fontello.eot?7165341');
-  src: url('./icons/fontello.eot?7165341#iefix') format('embedded-opentype'),
-       url('./icons/fontello.woff2?7165341') format('woff2'),
-       url('./icons/fontello.woff?7165341') format('woff'),
-       url('./icons/fontello.ttf?7165341') format('truetype'),
-       url('./icons/fontello.svg?7165341#fontello') format('svg');
+  src: url('../font/fontello.eot?7165341');
+  src: url('../font/fontello.eot?7165341#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?7165341') format('woff2'),
+       url('../font/fontello.woff?7165341') format('woff'),
+       url('../font/fontello.ttf?7165341') format('truetype'),
+       url('../font/fontello.svg?7165341#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
